better exchange usage search
check exchange ids for linked process links