@@ -1,16 +1,17 @@
 package org.openlca.core.database.usage;
 
-import java.util.ArrayList;
+import static org.openlca.core.database.usage.Search.asSqlList;
+
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 import org.openlca.core.database.IDatabase;
-import org.openlca.core.database.ProductSystemDao;
 import org.openlca.core.model.Exchange;
 import org.openlca.core.model.ModelType;
 import org.openlca.core.model.Process;
+import org.openlca.core.model.ProductSystem;
 import org.openlca.core.model.descriptors.RootDescriptor;
 
 /**
@@ -18,36 +19,46 @@ import org.openlca.core.model.descriptors.RootDescriptor;
  * process can be used in product systems as quantitative reference or in
  * process links.
  */
-public record ExchangeUseSearch(IDatabase database, Process process) {
+public record ExchangeUseSearch(IDatabase db, Process process) {
 
-	public List<RootDescriptor> findUses(Exchange exchange) {
-		if (exchange == null)
-			return Collections.emptyList();
-		return findUses(List.of(exchange));
+	public List<? extends RootDescriptor> findUses(Exchange e) {
+		return e != null
+			? findUses(List.of(e))
+			: Collections.emptyList();
 	}
 
-	public List<RootDescriptor> findUses(List<Exchange> exchanges) {
-		if (exchanges == null || exchanges.isEmpty())
+	public List<? extends RootDescriptor> findUses(List<Exchange> exs) {
+		if (exs == null || exs.isEmpty())
 			return Collections.emptyList();
-		Set<Long> ids = new HashSet<>();
-		Set<Long> flowIds = new HashSet<>();
-		for (Exchange exchange : exchanges) {
-			ids.add(exchange.id);
-			flowIds.add(exchange.flow.id);
+
+		var exchangeIds = new HashSet<Long>();
+		var flowIds = new HashSet<Long>();
+		for (var e : exs) {
+			exchangeIds.add(e.id);
+			if (e.flow != null) {
+				flowIds.add(e.flow.id);
+			}
 		}
-		Set<Long> systemIds = new HashSet<>();
-		systemIds.addAll(Search.on(database).queryForIds(
-			getProductSystemQuery(flowIds)));
-		systemIds.addAll(Search.on(database).queryForIds(
-			ModelType.PRODUCT_SYSTEM, ids, "f_reference_exchange"));
-		return new ArrayList<>(
-			new ProductSystemDao(database).getDescriptors(systemIds));
+
+		var systemIds = new HashSet<Long>();
+
+		// search in links
+		systemIds.addAll(
+			Search.on(db).queryForIds(linkUsageOf(flowIds, exchangeIds)));
+
+		// search in quantitative references
+		systemIds.addAll(
+			Search.on(db).queryForIds(
+				ModelType.PRODUCT_SYSTEM, exchangeIds, "f_reference_exchange"));
+
+		return db.getDescriptors(ProductSystem.class, systemIds);
 	}
 
-	private String getProductSystemQuery(Set<Long> flowIds) {
-		return "SELECT DISTINCT f_product_system FROM tbl_process_links "
-			+ "WHERE (f_provider = " + process.id
-			+ " OR f_process = " + process.id + ")"
-			+ "AND f_flow IN " + Search.asSqlList(flowIds);
+	private String linkUsageOf(Set<Long> flowIds, Set<Long> exchangeIds) {
+		return "SELECT DISTINCT f_product_system FROM tbl_process_links WHERE ("
+			+ "f_provider = " + process.id + " AND f_flow IN " + asSqlList(flowIds)
+			+ ") OR ("
+			+ "f_process = " + process.id + " AND f_exchange IN " + asSqlList(exchangeIds)
+			+ ")";
 	}
 }
